k8s/apps/prometheus/tailscale.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana
  namespace: monitoring
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "grafana"
