k8s/apps/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.fomiller.com`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
